Lab4/parser.out
Grammar:

Rule 0     S' -> instructions
Rule 1     instructions -> instruction
Rule 2     instructions -> instructions instruction
Rule 3     instruction -> RETURN right_hand_side_expression ;
Rule 4     instruction -> CONTINUE ;
Rule 5     instruction -> BREAK ;
Rule 6     instruction -> { instructions }
Rule 7     instruction -> print_instruction
Rule 8     instruction -> full_line_instruction
Rule 9     instruction -> for_instruction
Rule 10    instruction -> while_instruction
Rule 11    instruction -> if_instruction
Rule 12    if_instruction -> IF ( relation_expression ) instruction  [precedence=nonassoc, level=1]
Rule 13    if_instruction -> IF ( relation_expression ) instruction ELSE instruction  [precedence=nonassoc, level=2]
Rule 14    while_instruction -> WHILE ( relation_expression ) instruction
Rule 15    for_instruction -> FOR ID = id_int : id_int instruction
Rule 16    id_int -> ID
Rule 17    id_int -> INTNUM
Rule 18    print_instruction -> PRINT printables ;
Rule 19    printables -> matrix_ref
Rule 20    printables -> value
Rule 21    printables -> printables , value
Rule 22    value -> STRING
Rule 23    value -> ID
Rule 24    value -> FLOATNUM
Rule 25    value -> INTNUM
Rule 26    right_hand_side_expression -> matrix
Rule 27    right_hand_side_expression -> vector
Rule 28    right_hand_side_expression -> right_hand_side_expression DOTDIVIDE right_hand_side_expression  [precedence=left, level=5]
Rule 29    right_hand_side_expression -> right_hand_side_expression DOTTIMES right_hand_side_expression  [precedence=left, level=5]
Rule 30    right_hand_side_expression -> right_hand_side_expression DOTMINUS right_hand_side_expression  [precedence=left, level=4]
Rule 31    right_hand_side_expression -> right_hand_side_expression DOTPLUS right_hand_side_expression  [precedence=left, level=4]
Rule 32    right_hand_side_expression -> right_hand_side_expression / right_hand_side_expression  [precedence=left, level=5]
Rule 33    right_hand_side_expression -> right_hand_side_expression * right_hand_side_expression  [precedence=left, level=5]
Rule 34    right_hand_side_expression -> right_hand_side_expression - right_hand_side_expression  [precedence=left, level=4]
Rule 35    right_hand_side_expression -> right_hand_side_expression + right_hand_side_expression  [precedence=left, level=4]
Rule 36    right_hand_side_expression -> matrix '  [precedence=nonassoc, level=6]
Rule 37    right_hand_side_expression -> matrix_ref
Rule 38    right_hand_side_expression -> value
Rule 39    right_hand_side_expression -> matrix_functions
Rule 40    right_hand_side_expression -> ( right_hand_side_expression )
Rule 41    right_hand_side_expression -> relation_expression
Rule 42    right_hand_side_expression -> unary
Rule 43    unary -> - right_hand_side_expression  [precedence=right, level=7]
Rule 44    full_line_instruction -> ( full_line_instruction )
Rule 45    full_line_instruction -> assign_instruction
Rule 46    assign_instruction -> ID DIVIDEASSIGN right_hand_side_expression ;
Rule 47    assign_instruction -> ID TIMESASSIGN right_hand_side_expression ;
Rule 48    assign_instruction -> ID MINUSASSIGN right_hand_side_expression ;
Rule 49    assign_instruction -> ID PLUSASSIGN right_hand_side_expression ;
Rule 50    assign_instruction -> ID = right_hand_side_expression ;
Rule 51    assign_instruction -> matrix_ref DIVIDEASSIGN right_hand_side_expression ;
Rule 52    assign_instruction -> matrix_ref TIMESASSIGN right_hand_side_expression ;
Rule 53    assign_instruction -> matrix_ref MINUSASSIGN right_hand_side_expression ;
Rule 54    assign_instruction -> matrix_ref PLUSASSIGN right_hand_side_expression ;
Rule 55    assign_instruction -> matrix_ref = right_hand_side_expression ;
Rule 56    matrix_ref -> ID [ id_ints ]
Rule 57    id_ints -> id_int
Rule 58    id_ints -> id_ints , id_int
Rule 59    relation_expression -> right_hand_side_expression NE right_hand_side_expression  [precedence=nonassoc, level=3]
Rule 60    relation_expression -> right_hand_side_expression EQ right_hand_side_expression  [precedence=nonassoc, level=3]
Rule 61    relation_expression -> right_hand_side_expression GE right_hand_side_expression  [precedence=nonassoc, level=3]
Rule 62    relation_expression -> right_hand_side_expression LE right_hand_side_expression  [precedence=nonassoc, level=3]
Rule 63    relation_expression -> right_hand_side_expression GT right_hand_side_expression  [precedence=nonassoc, level=3]
Rule 64    relation_expression -> right_hand_side_expression LT right_hand_side_expression  [precedence=nonassoc, level=3]
Rule 65    matrix_functions -> EYE ( id_int )
Rule 66    matrix_functions -> ONES ( id_int )
Rule 67    matrix_functions -> ZEROS ( id_int )
Rule 68    vector -> [ ]
Rule 69    vector -> [ variables ]
Rule 70    matrix -> [ vectors ]
Rule 71    vectors -> vector
Rule 72    vectors -> vectors , vector
Rule 73    variables -> value
Rule 74    variables -> variables , value

Terminals, with rules where they appear:

'                    : 36
(                    : 12 13 14 40 44 65 66 67
)                    : 12 13 14 40 44 65 66 67
*                    : 33
+                    : 35
,                    : 21 58 72 74
-                    : 34 43
/                    : 32
:                    : 15
;                    : 3 4 5 18 46 47 48 49 50 51 52 53 54 55
=                    : 15 50 55
BREAK                : 5
CONTINUE             : 4
DIVIDEASSIGN         : 46 51
DOTDIVIDE            : 28
DOTMINUS             : 30
DOTPLUS              : 31
DOTTIMES             : 29
ELSE                 : 13
EQ                   : 60
EYE                  : 65
FLOATNUM             : 24
FOR                  : 15
GE                   : 61
GT                   : 63
ID                   : 15 16 23 46 47 48 49 50 56
IF                   : 12 13
INTNUM               : 17 25
LE                   : 62
LT                   : 64
MINUSASSIGN          : 48 53
NE                   : 59
ONES                 : 66
PLUSASSIGN           : 49 54
PRINT                : 18
RETURN               : 3
STRING               : 22
TIMESASSIGN          : 47 52
WHILE                : 14
ZEROS                : 67
[                    : 56 68 69 70
]                    : 56 68 69 70
error                : 
{                    : 6
}                    : 6

Nonterminals, with rules where they appear:

assign_instruction   : 45
for_instruction      : 9
full_line_instruction : 8 44
id_int               : 15 15 57 58 65 66 67
id_ints              : 56 58
if_instruction       : 11
instruction          : 1 2 12 13 13 14 15
instructions         : 2 6 0
matrix               : 26 36
matrix_functions     : 39
matrix_ref           : 19 37 51 52 53 54 55
print_instruction    : 7
printables           : 18 21
relation_expression  : 12 13 14 41
right_hand_side_expression : 3 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 40 43 46 47 48 49 50 51 52 53 54 55 59 59 60 60 61 61 62 62 63 63 64 64
unary                : 42
value                : 20 21 38 73 74
variables            : 69 74
vector               : 27 71 72
vectors              : 70 72
while_instruction    : 10


state 0

    (0) S' -> . instructions
    (1) instructions -> . instruction
    (2) instructions -> . instructions instruction
    (3) instruction -> . RETURN right_hand_side_expression ;
    (4) instruction -> . CONTINUE ;
    (5) instruction -> . BREAK ;
    (6) instruction -> . { instructions }
    (7) instruction -> . print_instruction
    (8) instruction -> . full_line_instruction
    (9) instruction -> . for_instruction
    (10) instruction -> . while_instruction
    (11) instruction -> . if_instruction
    (18) print_instruction -> . PRINT printables ;
    (44) full_line_instruction -> . ( full_line_instruction )
    (45) full_line_instruction -> . assign_instruction
    (15) for_instruction -> . FOR ID = id_int : id_int instruction
    (14) while_instruction -> . WHILE ( relation_expression ) instruction
    (12) if_instruction -> . IF ( relation_expression ) instruction
    (13) if_instruction -> . IF ( relation_expression ) instruction ELSE instruction
    (46) assign_instruction -> . ID DIVIDEASSIGN right_hand_side_expression ;
    (47) assign_instruction -> . ID TIMESASSIGN right_hand_side_expression ;
    (48) assign_instruction -> . ID MINUSASSIGN right_hand_side_expression ;
    (49) assign_instruction -> . ID PLUSASSIGN right_hand_side_expression ;
    (50) assign_instruction -> . ID = right_hand_side_expression ;
    (51) assign_instruction -> . matrix_ref DIVIDEASSIGN right_hand_side_expression ;
    (52) assign_instruction -> . matrix_ref TIMESASSIGN right_hand_side_expression ;
    (53) assign_instruction -> . matrix_ref MINUSASSIGN right_hand_side_expression ;
    (54) assign_instruction -> . matrix_ref PLUSASSIGN right_hand_side_expression ;
    (55) assign_instruction -> . matrix_ref = right_hand_side_expression ;
    (56) matrix_ref -> . ID [ id_ints ]
    RETURN          shift and go to state 3
    CONTINUE        shift and go to state 4
    BREAK           shift and go to state 5
    {               shift and go to state 6
    PRINT           shift and go to state 12
    (               shift and go to state 13
    FOR             shift and go to state 15
    WHILE           shift and go to state 17
    IF              shift and go to state 18
    ID              shift and go to state 16

    instructions                   shift and go to state 1
    instruction                    shift and go to state 2
    print_instruction              shift and go to state 7
    full_line_instruction          shift and go to state 8
    for_instruction                shift and go to state 9
    while_instruction              shift and go to state 10
    if_instruction                 shift and go to state 11
    assign_instruction             shift and go to state 14
    matrix_ref                     shift and go to state 19

state 1

    (0) S' -> instructions .
    (2) instructions -> instructions . instruction
    (3) instruction -> . RETURN right_hand_side_expression ;
    (4) instruction -> . CONTINUE ;
    (5) instruction -> . BREAK ;
    (6) instruction -> . { instructions }
    (7) instruction -> . print_instruction
    (8) instruction -> . full_line_instruction
    (9) instruction -> . for_instruction
    (10) instruction -> . while_instruction
    (11) instruction -> . if_instruction
    (18) print_instruction -> . PRINT printables ;
    (44) full_line_instruction -> . ( full_line_instruction )
    (45) full_line_instruction -> . assign_instruction
    (15) for_instruction -> . FOR ID = id_int : id_int instruction
    (14) while_instruction -> . WHILE ( relation_expression ) instruction
    (12) if_instruction -> . IF ( relation_expression ) instruction
    (13) if_instruction -> . IF ( relation_expression ) instruction ELSE instruction
    (46) assign_instruction -> . ID DIVIDEASSIGN right_hand_side_expression ;
    (47) assign_instruction -> . ID TIMESASSIGN right_hand_side_expression ;
    (48) assign_instruction -> . ID MINUSASSIGN right_hand_side_expression ;
    (49) assign_instruction -> . ID PLUSASSIGN right_hand_side_expression ;
    (50) assign_instruction -> . ID = right_hand_side_expression ;
    (51) assign_instruction -> . matrix_ref DIVIDEASSIGN right_hand_side_expression ;
    (52) assign_instruction -> . matrix_ref TIMESASSIGN right_hand_side_expression ;
    (53) assign_instruction -> . matrix_ref MINUSASSIGN right_hand_side_expression ;
    (54) assign_instruction -> . matrix_ref PLUSASSIGN right_hand_side_expression ;
    (55) assign_instruction -> . matrix_ref = right_hand_side_expression ;
    (56) matrix_ref -> . ID [ id_ints ]
    RETURN          shift and go to state 3
    CONTINUE        shift and go to state 4
    BREAK           shift and go to state 5
    {               shift and go to state 6
    PRINT           shift and go to state 12
    (               shift and go to state 13
    FOR             shift and go to state 15
    WHILE           shift and go to state 17
    IF              shift and go to state 18
    ID              shift and go to state 16

    instruction                    shift and go to state 20
    print_instruction              shift and go to state 7
    full_line_instruction          shift and go to state 8
    for_instruction                shift and go to state 9
    while_instruction              shift and go to state 10
    if_instruction                 shift and go to state 11
    assign_instruction             shift and go to state 14
    matrix_ref                     shift and go to state 19

state 2

    (1) instructions -> instruction .
    RETURN          reduce using rule 1 (instructions -> instruction .)
    CONTINUE        reduce using rule 1 (instructions -> instruction .)
    BREAK           reduce using rule 1 (instructions -> instruction .)
    {               reduce using rule 1 (instructions -> instruction .)
    PRINT           reduce using rule 1 (instructions -> instruction .)
    (               reduce using rule 1 (instructions -> instruction .)
    FOR             reduce using rule 1 (instructions -> instruction .)
    WHILE           reduce using rule 1 (instructions -> instruction .)
    IF              reduce using rule 1 (instructions -> instruction .)
    ID              reduce using rule 1 (instructions -> instruction .)
    $end            reduce using rule 1 (instructions -> instruction .)
    }               reduce using rule 1 (instructions -> instruction .)


state 3

    (3) instruction -> RETURN . right_hand_side_expression ;
    (26) right_hand_side_expression -> . matrix
    (27) right_hand_side_expression -> . vector
    (28) right_hand_side_expression -> . right_hand_side_expression DOTDIVIDE right_hand_side_expression
    (29) right_hand_side_expression -> . right_hand_side_expression DOTTIMES right_hand_side_expression
    (30) right_hand_side_expression -> . right_hand_side_expression DOTMINUS right_hand_side_expression
    (31) right_hand_side_expression -> . right_hand_side_expression DOTPLUS right_hand_side_expression
    (32) right_hand_side_expression -> . right_hand_side_expression / right_hand_side_expression
    (33) right_hand_side_expression -> . right_hand_side_expression * right_hand_side_expression
    (34) right_hand_side_expression -> . right_hand_side_expression - right_hand_side_expression
    (35) right_hand_side_expression -> . right_hand_side_expression + right_hand_side_expression
    (36) right_hand_side_expression -> . matrix '
    (37) right_hand_side_expression -> . matrix_ref
    (38) right_hand_side_expression -> . value
    (39) right_hand_side_expression -> . matrix_functions
    (40) right_hand_side_expression -> . ( right_hand_side_expression )
    (41) right_hand_side_expression -> . relation_expression
    (42) right_hand_side_expression -> . unary
    (70) matrix -> . [ vectors ]
    (68) vector -> . [ ]
    (69) vector -> . [ variables ]
    (56) matrix_ref -> . ID [ id_ints ]
    (22) value -> . STRING
    (23) value -> . ID
    (24) value -> . FLOATNUM
    (25) value -> . INTNUM
    (65) matrix_functions -> . EYE ( id_int )
    (66) matrix_functions -> . ONES ( id_int )
    (67) matrix_functions -> . ZEROS ( id_int )
    (59) relation_expression -> . right_hand_side_expression NE right_hand_side_expression
    (60) relation_expression -> . right_hand_side_expression EQ right_hand_side_expression
    (61) relation_expression -> . right_hand_side_expression GE right_hand_side_expression
    (62) relation_expression -> . right_hand_side_expression LE right_hand_side_expression
    (63) relation_expression -> . right_hand_side_expression GT right_hand_side_expression
    (64) relation_expression -> . right_hand_side_expression LT right_hand_side_expression
    (43) unary -> . - right_hand_side_expression
    (               shift and go to state 28
    [               shift and go to state 31
    ID              shift and go to state 32
    STRING          shift and go to state 33
    FLOATNUM        shift and go to state 34
    INTNUM          shift and go to state 35
    EYE             shift and go to state 36
    ONES            shift and go to state 37
    ZEROS           shift and go to state 38
    -               shift and go to state 24

    right_hand_side_expression     shift and go to state 21
    matrix                         shift and go to state 22
    vector                         shift and go to state 23
    matrix_ref                     shift and go to state 25
    value                          shift and go to state 26
    matrix_functions               shift and go to state 27
    relation_expression            shift and go to state 29
    unary                          shift and go to state 30

state 4

    (4) instruction -> CONTINUE . ;
    ;               shift and go to state 39


state 5

    (5) instruction -> BREAK . ;
    ;               shift and go to state 40


state 6

    (6) instruction -> { . instructions }
    (1) instructions -> . instruction
    (2) instructions -> . instructions instruction
    (3) instruction -> . RETURN right_hand_side_expression ;
    (4) instruction -> . CONTINUE ;
    (5) instruction -> . BREAK ;
    (6) instruction -> . { instructions }
    (7) instruction -> . print_instruction
    (8) instruction -> . full_line_instruction
    (9) instruction -> . for_instruction
    (10) instruction -> . while_instruction
    (11) instruction -> . if_instruction
    (18) print_instruction -> . PRINT printables ;
    (44) full_line_instruction -> . ( full_line_instruction )
    (45) full_line_instruction -> . assign_instruction
    (15) for_instruction -> . FOR ID = id_int : id_int instruction
    (14) while_instruction -> . WHILE ( relation_expression ) instruction
    (12) if_instruction -> . IF ( relation_expression ) instruction
    (13) if_instruction -> . IF ( relation_expression ) instruction ELSE instruction
    (46) assign_instruction -> . ID DIVIDEASSIGN right_hand_side_expression ;
    (47) assign_instruction -> . ID TIMESASSIGN right_hand_side_expression ;
    (48) assign_instruction -> . ID MINUSASSIGN right_hand_side_expression ;
    (49) assign_instruction -> . ID PLUSASSIGN right_hand_side_expression ;
    (50) assign_instruction -> . ID = right_hand_side_expression ;
    (51) assign_instruction -> . matrix_ref DIVIDEASSIGN right_hand_side_expression ;
    (52) assign_instruction -> . matrix_ref TIMESASSIGN right_hand_side_expression ;
    (53) assign_instruction -> . matrix_ref MINUSASSIGN right_hand_side_expression ;
    (54) assign_instruction -> . matrix_ref PLUSASSIGN right_hand_side_expression ;
    (55) assign_instruction -> . matrix_ref = right_hand_side_expression ;
    (56) matrix_ref -> . ID [ id_ints ]
    RETURN          shift and go to state 3
    CONTINUE        shift and go to state 4
    BREAK           shift and go to state 5
    {               shift and go to state 6
    PRINT           shift and go to state 12
    (               shift and go to state 13
    FOR             shift and go to state 15
    WHILE           shift and go to state 17
    IF              shift and go to state 18
    ID              shift and go to state 16

    instructions                   shift and go to state 41
    instruction                    shift and go to state 2
    print_instruction              shift and go to state 7
    full_line_instruction          shift and go to state 8
    for_instruction                shift and go to state 9
    while_instruction              shift and go to state 10
    if_instruction                 shift and go to state 11
    assign_instruction             shift and go to state 14
    matrix_ref                     shift and go to state 19

state 7

    (7) instruction -> print_instruction .
    RETURN          reduce using rule 7 (instruction -> print_instruction .)
    CONTINUE        reduce using rule 7 (instruction -> print_instruction .)
    BREAK           reduce using rule 7 (instruction -> print_instruction .)
    {               reduce using rule 7 (instruction -> print_instruction .)
    PRINT           reduce using rule 7 (instruction -> print_instruction .)
    (               reduce using rule 7 (instruction -> print_instruction .)
    FOR             reduce using rule 7 (instruction -> print_instruction .)
    WHILE           reduce using rule 7 (instruction -> print_instruction .)
    IF              reduce using rule 7 (instruction -> print_instruction .)
    ID              reduce using rule 7 (instruction -> print_instruction .)
    $end            reduce using rule 7 (instruction -> print_instruction .)
    }               reduce using rule 7 (instruction -> print_instruction .)
    ELSE            reduce using rule 7 (instruction -> print_instruction .)


state 8

    (8) instruction -> full_line_instruction .
    RETURN          reduce using rule 8 (instruction -> full_line_instruction .)
    CONTINUE        reduce using rule 8 (instruction -> full_line_instruction .)
    BREAK           reduce using rule 8 (instruction -> full_line_instruction .)
    {               reduce using rule 8 (instruction -> full_line_instruction .)
    PRINT           reduce using rule 8 (instruction -> full_line_instruction .)
    (               reduce using rule 8 (instruction -> full_line_instruction .)
    FOR             reduce using rule 8 (instruction -> full_line_instruction .)
    WHILE           reduce using rule 8 (instruction -> full_line_instruction .)
    IF              reduce using rule 8 (instruction -> full_line_instruction .)
    ID              reduce using rule 8 (instruction -> full_line_instruction .)
    $end            reduce using rule 8 (instruction -> full_line_instruction .)
    }               reduce using rule 8 (instruction -> full_line_instruction .)
    ELSE            reduce using rule 8 (instruction -> full_line_instruction .)


state 9

    (9) instruction -> for_instruction .
    RETURN          reduce using rule 9 (instruction -> for_instruction .)
    CONTINUE        reduce using rule 9 (instruction -> for_instruction .)
    BREAK           reduce using rule 9 (instruction -> for_instruction .)
    {               reduce using rule 9 (instruction -> for_instruction .)
    PRINT           reduce using rule 9 (instruction -> for_instruction .)
    (               reduce using rule 9 (instruction -> for_instruction .)
    FOR             reduce using rule 9 (instruction -> for_instruction .)
    WHILE           reduce using rule 9 (instruction -> for_instruction .)
    IF              reduce using rule 9 (instruction -> for_instruction .)
    ID              reduce using rule 9 (instruction -> for_instruction .)
    $end            reduce using rule 9 (instruction -> for_instruction .)
    }               reduce using rule 9 (instruction -> for_instruction .)
    ELSE            reduce using rule 9 (instruction -> for_instruction .)


state 10

    (10) instruction -> while_instruction .
    RETURN          reduce using rule 10 (instruction -> while_instruction .)
    CONTINUE        reduce using rule 10 (instruction -> while_instruction .)
    BREAK           reduce using rule 10 (instruction -> while_instruction .)
    {               reduce using rule 10 (instruction -> while_instruction .)
    PRINT           reduce using rule 10 (instruction -> while_instruction .)
    (               reduce using rule 10 (instruction -> while_instruction .)
    FOR             reduce using rule 10 (instruction -> while_instruction .)
    WHILE           reduce using rule 10 (instruction -> while_instruction .)
    IF              reduce using rule 10 (instruction -> while_instruction .)
    ID              reduce using rule 10 (instruction -> while_instruction .)
    $end            reduce using rule 10 (instruction -> while_instruction .)
    }               reduce using rule 10 (instruction -> while_instruction .)
    ELSE            reduce using rule 10 (instruction -> while_instruction .)


state 11

    (11) instruction -> if_instruction .
    RETURN          reduce using rule 11 (instruction -> if_instruction .)
    CONTINUE        reduce using rule 11 (instruction -> if_instruction .)
    BREAK           reduce using rule 11 (instruction -> if_instruction .)
    {               reduce using rule 11 (instruction -> if_instruction .)
    PRINT           reduce using rule 11 (instruction -> if_instruction .)
    (               reduce using rule 11 (instruction -> if_instruction .)
    FOR             reduce using rule 11 (instruction -> if_instruction .)
    WHILE           reduce using rule 11 (instruction -> if_instruction .)
    IF              reduce using rule 11 (instruction -> if_instruction .)
    ID              reduce using rule 11 (instruction -> if_instruction .)
    $end            reduce using rule 11 (instruction -> if_instruction .)
    }               reduce using rule 11 (instruction -> if_instruction .)
    ELSE            reduce using rule 11 (instruction -> if_instruction .)


state 12

    (18) print_instruction -> PRINT . printables ;
    (19) printables -> . matrix_ref
    (20) printables -> . value
    (21) printables -> . printables , value
    (56) matrix_ref -> . ID [ id_ints ]
    (22) value -> . STRING
    (23) value -> . ID
    (24) value -> . FLOATNUM
    (25) value -> . INTNUM
    ID              shift and go to state 32
    STRING          shift and go to state 33
    FLOATNUM        shift and go to state 34
    INTNUM          shift and go to state 35

    printables                     shift and go to state 42
    matrix_ref                     shift and go to state 43
    value                          shift and go to state 44

state 13

    (44) full_line_instruction -> ( . full_line_instruction )
    (44) full_line_instruction -> . ( full_line_instruction )
    (45) full_line_instruction -> . assign_instruction
    (46) assign_instruction -> . ID DIVIDEASSIGN right_hand_side_expression ;
    (47) assign_instruction -> . ID TIMESASSIGN right_hand_side_expression ;
    (48) assign_instruction -> . ID MINUSASSIGN right_hand_side_expression ;
    (49) assign_instruction -> . ID PLUSASSIGN right_hand_side_expression ;
    (50) assign_instruction -> . ID = right_hand_side_expression ;
    (51) assign_instruction -> . matrix_ref DIVIDEASSIGN right_hand_side_expression ;
    (52) assign_instruction -> . matrix_ref TIMESASSIGN right_hand_side_expression ;
    (53) assign_instruction -> . matrix_ref MINUSASSIGN right_hand_side_expression ;
    (54) assign_instruction -> . matrix_ref PLUSASSIGN right_hand_side_expression ;
    (55) assign_instruction -> . matrix_ref = right_hand_side_expression ;
    (56) matrix_ref -> . ID [ id_ints ]
    (               shift and go to state 13
    ID              shift and go to state 16

    full_line_instruction          shift and go to state 45
    assign_instruction             shift and go to state 14
    matrix_ref                     shift and go to state 19

state 14

    (45) full_line_instruction -> assign_instruction .
    RETURN          reduce using rule 45 (full_line_instruction -> assign_instruction .)
    CONTINUE        reduce using rule 45 (full_line_instruction -> assign_instruction .)
    BREAK           reduce using rule 45 (full_line_instruction -> assign_instruction .)
    {               reduce using rule 45 (full_line_instruction -> assign_instruction .)
    PRINT           reduce using rule 45 (full_line_instruction -> assign_instruction .)
    (               reduce using rule 45 (full_line_instruction -> assign_instruction .)
    FOR             reduce using rule 45 (full_line_instruction -> assign_instruction .)
    WHILE           reduce using rule 45 (full_line_instruction -> assign_instruction .)
    IF              reduce using rule 45 (full_line_instruction -> assign_instruction .)
    ID              reduce using rule 45 (full_line_instruction -> assign_instruction .)
    $end            reduce using rule 45 (full_line_instruction -> assign_instruction .)
    }               reduce using rule 45 (full_line_instruction -> assign_instruction .)
    )               reduce using rule 45 (full_line_instruction -> assign_instruction .)
    ELSE            reduce using rule 45 (full_line_instruction -> assign_instruction .)


state 15

    (15) for_instruction -> FOR . ID = id_int : id_int instruction
    ID              shift and go to state 46


state 16

    (46) assign_instruction -> ID . DIVIDEASSIGN right_hand_side_expression ;
    (47) assign_instruction -> ID . TIMESASSIGN right_hand_side_expression ;
    (48) assign_instruction -> ID . MINUSASSIGN right_hand_side_expression ;
    (49) assign_instruction -> ID . PLUSASSIGN right_hand_side_expression ;
    (50) assign_instruction -> ID . = right_hand_side_expression ;
    (56) matrix_ref -> ID . [ id_ints ]
    DIVIDEASSIGN    shift and go to state 47
    TIMESASSIGN     shift and go to state 48
    MINUSASSIGN     shift and go to state 49
    PLUSASSIGN      shift and go to state 50
    =               shift and go to state 51
    [               shift and go to state 52


state 17

    (14) while_instruction -> WHILE . ( relation_expression ) instruction
    (               shift and go to state 53


state 18

    (12) if_instruction -> IF . ( relation_expression ) instruction
    (13) if_instruction -> IF . ( relation_expression ) instruction ELSE instruction
    (               shift and go to state 54


state 19

    (51) assign_instruction -> matrix_ref . DIVIDEASSIGN right_hand_side_expression ;
    (52) assign_instruction -> matrix_ref . TIMESASSIGN right_hand_side_expression ;
    (53) assign_instruction -> matrix_ref . MINUSASSIGN right_hand_side_expression ;
    (54) assign_instruction -> matrix_ref . PLUSASSIGN right_hand_side_expression ;
    (55) assign_instruction -> matrix_ref . = right_hand_side_expression ;
    DIVIDEASSIGN    shift and go to state 55
    TIMESASSIGN     shift and go to state 56
    MINUSASSIGN     shift and go to state 57
    PLUSASSIGN      shift and go to state 58
    =               shift and go to state 59


state 20

    (2) instructions -> instructions instruction .
    RETURN          reduce using rule 2 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 2 (instructions -> instructions instruction .)
    BREAK           reduce using rule 2 (instructions -> instructions instruction .)
    {               reduce using rule 2 (instructions -> instructions instruction .)
    PRINT           reduce using rule 2 (instructions -> instructions instruction .)
    (               reduce using rule 2 (instructions -> instructions instruction .)
    FOR             reduce using rule 2 (instructions -> instructions instruction .)
    WHILE           reduce using rule 2 (instructions -> instructions instruction .)
    IF              reduce using rule 2 (instructions -> instructions instruction .)
    ID              reduce using rule 2 (instructions -> instructions instruction .)
    $end            reduce using rule 2 (instructions -> instructions instruction .)
    }               reduce using rule 2 (instructions -> instructions instruction .)


state 21

    (3) instruction -> RETURN right_hand_side_expression . ;
    (28) right_hand_side_expression -> right_hand_side_expression . DOTDIVIDE right_hand_side_expression
    (29) right_hand_side_expression -> right_hand_side_expression . DOTTIMES right_hand_side_expression
    (30) right_hand_side_expression -> right_hand_side_expression . DOTMINUS right_hand_side_expression
    (31) right_hand_side_expression -> right_hand_side_expression . DOTPLUS right_hand_side_expression
    (32) right_hand_side_expression -> right_hand_side_expression . / right_hand_side_expression
    (33) right_hand_side_expression -> right_hand_side_expression . * right_hand_side_expression
    (34) right_hand_side_expression -> right_hand_side_expression . - right_hand_side_expression
    (35) right_hand_side_expression -> right_hand_side_expression . + right_hand_side_expression
    (59) relation_expression -> right_hand_side_expression . NE right_hand_side_expression
    (60) relation_expression -> right_hand_side_expression . EQ right_hand_side_expression
    (61) relation_expression -> right_hand_side_expression . GE right_hand_side_expression
    (62) relation_expression -> right_hand_side_expression . LE right_hand_side_expression
    (63) relation_expression -> right_hand_side_expression . GT right_hand_side_expression
    (64) relation_expression -> right_hand_side_expression . LT right_hand_side_expression
    ;               shift and go to state 60
    DOTDIVIDE       shift and go to state 61
    DOTTIMES        shift and go to state 62
    DOTMINUS        shift and go to state 63
    DOTPLUS         shift and go to state 64
    /               shift and go to state 65
    *               shift and go to state 66
    -               shift and go to state 67
    +               shift and go to state 68
    NE              shift and go to state 69
    EQ              shift and go to state 70
    GE              shift and go to state 71
    LE              shift and go to state 72
    GT              shift and go to state 73
    LT              shift and go to state 74


state 22

    (26) right_hand_side_expression -> matrix .
    (36) right_hand_side_expression -> matrix . '
    ;               reduce using rule 26 (right_hand_side_expression -> matrix .)
    DOTDIVIDE       reduce using rule 26 (right_hand_side_expression -> matrix .)
    DOTTIMES        reduce using rule 26 (right_hand_side_expression -> matrix .)
    DOTMINUS        reduce using rule 26 (right_hand_side_expression -> matrix .)
    DOTPLUS         reduce using rule 26 (right_hand_side_expression -> matrix .)
    /               reduce using rule 26 (right_hand_side_expression -> matrix .)
    *               reduce using rule 26 (right_hand_side_expression -> matrix .)
    -               reduce using rule 26 (right_hand_side_expression -> matrix .)
    +               reduce using rule 26 (right_hand_side_expression -> matrix .)
    NE              reduce using rule 26 (right_hand_side_expression -> matrix .)
    EQ              reduce using rule 26 (right_hand_side_expression -> matrix .)
    GE              reduce using rule 26 (right_hand_side_expression -> matrix .)
    LE              reduce using rule 26 (right_hand_side_expression -> matrix .)
    GT              reduce using rule 26 (right_hand_side_expression -> matrix .)
    LT              reduce using rule 26 (right_hand_side_expression -> matrix .)
    )               reduce using rule 26 (right_hand_side_expression -> matrix .)
    '               shift and go to state 75


state 23

    (27) right_hand_side_expression -> vector .
    ;               reduce using rule 27 (right_hand_side_expression -> vector .)
    DOTDIVIDE       reduce using rule 27 (right_hand_side_expression -> vector .)
    DOTTIMES        reduce using rule 27 (right_hand_side_expression -> vector .)
    DOTMINUS        reduce using rule 27 (right_hand_side_expression -> vector .)
    DOTPLUS         reduce using rule 27 (right_hand_side_expression -> vector .)
    /               reduce using rule 27 (right_hand_side_expression -> vector .)
    *               reduce using rule 27 (right_hand_side_expression -> vector .)
    -               reduce using rule 27 (right_hand_side_expression -> vector .)
    +               reduce using rule 27 (right_hand_side_expression -> vector .)
    NE              reduce using rule 27 (right_hand_side_expression -> vector .)
    EQ              reduce using rule 27 (right_hand_side_expression -> vector .)
    GE              reduce using rule 27 (right_hand_side_expression -> vector .)
    LE              reduce using rule 27 (right_hand_side_expression -> vector .)
    GT              reduce using rule 27 (right_hand_side_expression -> vector .)
    LT              reduce using rule 27 (right_hand_side_expression -> vector .)
    )               reduce using rule 27 (right_hand_side_expression -> vector .)


state 24
